<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- login title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingBottom="20sp"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--  email and password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <!--email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bgcolor"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mail"/>
            <EditText
                android:layout_width="180sp"
                android:layout_height="45sp"
                android:layout_marginHorizontal="40sp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <!--password-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:background="@drawable/bgcolor">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pass"/>

            <EditText
                android:layout_width="180sp"
                android:layout_height="45sp"
                android:layout_marginHorizontal="40sp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

        </LinearLayout>


    </LinearLayout>

    <!--checkbox and forget password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center">

        <!--chekbox-->
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:gravity="left">

           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/remember"
               android:textColor="@color/black"
               android:textStyle="bold"/>
       </LinearLayout>

        <!--forget password-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/forget"/>
        </LinearLayout>

    </LinearLayout>

    <!--login with your account button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundc"
            android:padding="20dp"
            android:text="@string/account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <!--login with text view-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20sp"
            android:paddingLeft="10sp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center">

        <!--facbook button-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="3dp"
                android:src="@drawable/fbook" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fcbutton"
                android:padding="20dp"
                android:paddingRight="40dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <!--google button-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingLeft="3dp"
                android:src="@drawable/google" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gogbutton"
                android:padding="20dp"
                android:paddingHorizontal="40dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <!--login with button-->

    <!--new user-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user"
            android:padding="20dp"
            android:text="@string/newuser"
            android:textAllCaps="false"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>
